--- a/modules/20_incident_icm/app/views/icm/incident_journals/edit_pass.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/edit_pass.html.erb
@@ -93,7 +93,7 @@
               <td class="labelCol"><%= t(:label_icm_incident_journal_reply) %></td>
               <td class="dataCol" colspan="3" width="82%">
                 <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true%>
-                <%= rich_text_area("msgEditor",true) %>
+                <%= xheditor("msgEditor",true) %>
               </td>
               <% end%>
             </tr>
