清理layout文件,删除require_css与require_javascript

--- a/modules/40_survey_csi/app/views/csi/survey_subjects/_edit_form.html.erb
+++ b/modules/40_survey_csi/app/views/csi/survey_subjects/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<% require_javascript(:survey) %>
+<% require_jscss(:survey) %>
 <%= common_title %>
 <div id="edit_form">
 <%= form_for(@survey_subject,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
