--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -553,7 +553,8 @@
     <div id="request_watcher_list">
     <%= render :partial =>"/irm/watchers/sidebar_watcher_list",
                :locals => {:watchable => @incident_request,
-                           :editable => !@incident_request.close?,:dom_id=>"request_watcher_list"} %>
+                           :editable => !@incident_request.close?,
+                           :dom_id=>"request_watcher_list"} %>
     </div>
     <%= render :partial =>"/icm/incident_requests/sidebar_attachment_list" %>
     <%= render :partial =>"/icm/incident_requests/sidebar_relation_list", :locals => {:incident_request => @incident_request} %>
