--- a/modules/10_ironmine_irm/app/views/irm/common/upload_screen_shot.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/common/upload_screen_shot.html.erb
@@ -73,8 +73,7 @@ body{background-color:#f2f2f2}
         }
     }
 
-    function hideAttachScreen()
-    {
+    function hideAttachScreen(){
         parent.cancelAttach();
     }
 </script>
