--- a/modules/20_incident_icm/app/views/icm/incident_requests/index.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/index.html.erb
@@ -1,5 +1,10 @@
 <%= common_title %>
 
+<style type="text/css">
+    .btn-reply{background:url("<%=image_path("icons/chat_bubble.gif")%>") no-repeat scroll; width: 16px; height: 16px;}
+
+</style>
+
 <% if allow_to_function?(:view_icm_kanban) %>
   <div class="btn-toolbar">
     <div class="btn-group">
