--- a/modules/110_hotline_hli/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -2,7 +2,7 @@
     <% builder.column(:request_number,{:title=>t(:label_icm_incident_request_request_number_shot), :width => "55px",:searchable=>true,:sortable=>true})%>
     <% builder.column(:title,{:title=>t(:label_icm_incident_request_title),:searchable=>true,:width => "480px"})  do |data|%>
           <% if(data[:reply_flag].eql?("Y") && data[:close_flag].eql?("N"))%>
-             <%= icon_link("btn_reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
+             <%= icon_link("btn-reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
           <% end %>
           <%= link_to( "(#{data[:incident_status_id_label]})"+data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
     <% end %>
