个人信息的系统与组添加分页,修正事故单无法显示回复标志的问题

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/icons.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/icons.less
@@ -304,3 +304,8 @@ img.img18General{
 img.img18Large{
 }
 
+@chatbubblePath: asset-path('icons/chat_bubble.gif');
+
+img.btn-reply{background:url(@chatbubblePath) no-repeat scroll; width: 16px; height: 16px;}
+
+
