--- a/modules/10_ironmine_irm/app/views/irm/ldap_syn_headers/_show_dept.html.erb
+++ b/modules/10_ironmine_irm/app/views/irm/ldap_syn_headers/_show_dept.html.erb
@@ -1,60 +1,41 @@
-    <div id="head_2_ep" class="pbSubheader first tertiaryPalette">
-        <h3><%= t(:label_irm_ldap_syn_header_dept_title) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_ldap_syn_header_dept_syn_flag)%></label></td>
-              <td class="dataCol"><%= check_img(@ldap_syn_header.dept_syn_flag) %></td>
-              <td class="labelCol"><label ><%=t(:label_irm_ldap_syn_header_dept_level)%></label></td>
-              <td class="dataCol"><div><%= @ldap_syn_header.dept_level %></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_ldap_syn_header_dept_filter)%></label></td>
-              <td class="dataCol"><div><%= @ldap_syn_header.dept_filter %></div></td>
-              <td class="labelCol"><label ><%=t(:label_irm_ldap_syn_header_dept_desc)%></label></td>
-               <td class="dataCol"><%= @ldap_syn_header.dept_desc %></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_ldap_syn_header_dept_title) %></h2>
+    </td>
+    <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
+      <tbody>
+      <tr>
+        <td class="label-col"><label ><%=t(:label_irm_ldap_syn_header_dept_syn_flag)%></label></td>
+        <td class="data-col"><%= check_img(@ldap_syn_header.dept_syn_flag) %></td>
+        <td class="label-col"><label ><%=t(:label_irm_ldap_syn_header_dept_level)%></label></td>
+        <td class="data-col"><div><%= @ldap_syn_header.dept_level %></div></td>
+      </tr>
+      <tr>
+        <td class="label-col"><label ><%=t(:label_irm_ldap_syn_header_dept_filter)%></label></td>
+        <td class="data-col"><div><%= @ldap_syn_header.dept_filter %></div></td>
+        <td class="label-col"><label ><%=t(:label_irm_ldap_syn_header_dept_desc)%></label></td>
+        <td class="data-col"><%= @ldap_syn_header.dept_desc %></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-<div class="listRelatedObject setupBlock">
-  <div class="page-block">
-    <div class="pbHeader">
-      <table cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_ldap_syn_attribute_dept_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"></div>
-              </td>
-              <td class="pbHelp">
-                <div id="ldap_syn_attributesSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="dept_syn_attributes" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%= link_to(t(:edit),{:controller => "irm/ldap_syn_attributes", :action => "edit", :ah_id => @ldap_syn_header.id,:id=>"{id}",:back_url=>url_for({})}) %>
-          </div>
-          <div id="null_able" style="display:none">
-            <%= check_img("{null_able}") %>
-          </div>
-        </div>
-        <%= datatable("dept_syn_attributes",{:controller => "irm/ldap_syn_attributes", :action=>"get_data",:ah_id => @ldap_syn_header.id,:type=>@ldap_syn_header.dept_object,:format=>"json"},
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"50px"},
-                       { :key => "local_attr", :label => t(:label_irm_ldap_syn_attribute_local_attr),:width=>"100px" },
-                       { :key => "null_able",:formatter=>"Y.irm.template", :label => t(:label_irm_ldap_syn_attribute_null_able),:width=>"50px"},
-                       { :key => "value_type_name", :label => t(:label_irm_ldap_syn_attribute_ldap_attr_type),:width=>"100px" },
-                       { :key => "ldap_attr", :label => t(:label_irm_ldap_syn_attribute_ldap_attr),:width=>"100px" },
-                       { :key => "description", :label => t(:label_irm_ldap_syn_attribute_description),:searchable=>true },
-                       ],{})%>
-
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_ldap_syn_attribute_dept_list) %></h2>
+    </td>
+    <td class="page-block-button"></td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="dept_syn_attributes"></div>
+    <%= datatable("dept_syn_attributes",{:controller => "irm/ldap_syn_attributes", :action=>"get_data",:ah_id => @ldap_syn_header.id,:type=>@ldap_syn_header.dept_object},[]) %>
+  </div>
 </div>
