将对IE6的css hack属性独立出单独样式文件

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-ie6.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/bootstrap/bootstrap-ie6.css.less
@@ -1,7 +1,7 @@
 @import "bootstrap/bootstrap-override";
 // Set the correct sprite paths
-//@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.gif');
-//@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.gif');
+@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.gif');
+@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.gif');
 //ie6 {
 //    body {
 //        background: #ffffff;
