--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -1622,7 +1622,7 @@ table.detail-list td.label-col {
 table.detail-list td.data-col {
     text-align: left;
     padding: 2px 2px 2px 10px;
-    vertical-align: top;
+    vertical-align: middle;
 
 }
 
