--- a/modules/20_incident_icm/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag({:controller => "icm/incident_requests", :action => "add_relation", :source_id => incident_request.id}, :remote => true) do |f| %>
+<%= form_tag({:controller => "icm/incident_requests", :action => "add_relation", :source_id => incident_request.id,:_dom_id=>dom_id}, :remote => true) do |f| %>
 <div class="sidebar-block">
     <div class="sidebar-block-header"><h2>
       <%= t :label_icm_incident_request_relation %>
@@ -27,7 +27,7 @@
             </tr>
           </tbody>
           <% end %>
-          <tbody id="relation_list">
+          <tbody>
             <%= list_all_icm_incident_relations(incident_request.id)%>
           </tbody>
         </table>
