feature: 增加事故单首页排序功能

--- a/modules/110_hotline_hli/app/views/icm/incident_requests/_customer_list.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/_customer_list.html.erb
@@ -1,5 +1,6 @@
-<%= datatable("incident_requests",{:action=>"get_data"},[],{:export_data=>"#incidentRequestExport",:not_load=>true,:search_box=>"incident_requestsSearchBox",:html=>true,:export_data=>"#exportData",:view_filter=>true})%>
-<div id="incidentRequestsPaginatorBox"></div>
-
-
-
+<%= datatable("incident_requests",{:action=>"get_data"},[],
+              {:export_data=>"#incidentRequestExport",
+               :search_box=>"incident_requestsSearchBox",
+               :paginator_box=>'incidentRequestsPaginatorBox',
+               :view_filter=>true,:row_perpage => 50,
+               :export_data=>"#exportData"})%>
