修正事故单“分派”弹出的窗口，下拉列表被阻挡

--- a/modules/20_incident_icm/app/views/icm/incident_journals/_assign_modal.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_assign_modal.html.erb
@@ -27,35 +27,30 @@
     <a data-dismiss="modal" class="close" href="#">×</a>
     <h3><%= t(:label_icm_incident_request_assign) %></h3>
   </div>
-  <div class="modal-body">
+  <div class="modal-body" style="height: 350px;">
     <div id="portalLayouts">
       <div class="alert alert-error">
        <%= t(:label_icm_incident_request_support_group) %> : <%= t("activerecord.errors.messages.blank") %>
      </div>
           <%= hidden_field_tag "incident_request_ids", @incident_request.id, :id=>"incident_request_ids" %>
           <table class="form-table portal-setting" style="width: 100%">
-              <tr>
+             <tr>
                 <td class="label-col">
                   <label for="portalLayoutSelect"><%= t(:label_icm_incident_request_support_group) %></label>
                 </td>
-                <td class="data-3col" colspan="3">
+                <td class="data-col" colspan="3">
                   <%= blank_select_tag :support_group_id, available_support_group, {}, {:id => "incident_request_support_group_id"} %>
                 </td>
-              </tr>
-            <tr>
-              <td class="label-col">
-                <label for="portalLayoutSelect"><%= t(:label_icm_incident_request_support_person) %></label>
-              </td>
-              <td class="data-col" style="width:30%"><%= blank_select_tag(:support_person_id, [], {},
-                                                                          {
-                                                                                  :id => "incident_request_support_person_id",
-                                                                                  :href => url_for(:controller => "icm/support_groups", :action => "get_member_options", :format => "json", :id => "${incident_request_support_group_id}"),
-                                                                                  :depend => "incident_request_support_group_id",
-                                                                          }) %></td>
-            </tr>
-              <tr>
-                <td colspan="4"></td>
-              </tr>
+                <td class="label-col">
+                  <label for="portalLayoutSelect"><%= t(:label_icm_incident_request_support_person) %></label>
+                </td>
+                <td class="data-col"><%= blank_select_tag(:support_person_id, [], {},
+                                                          {
+                                                                  :id => "incident_request_support_person_id",
+                                                                  :href => url_for(:controller => "icm/support_groups", :action => "get_member_options", :format => "json", :id => "${incident_request_support_group_id}"),
+                                                                  :depend => "incident_request_support_group_id",
+                                                          }) %></td>
+             </tr>
           </table>
 
     </div>
