--- a/modules/20_incident_icm/app/views/icm/incident_journals/_edit_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_edit_form.html.erb
@@ -1,28 +1,15 @@
-<%= form_for(@incident_journal,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+<%= form_for(@incident_journal,:url=>{:action=>"update", :request_id => @incident_journal.incident_request_id, :id => @incident_journal},
+             :builder => CustomFormBuilder) do |f| %>
   <% content_for :form_block_common   do%>
     <table class="form-table">
       <tbody>
-        
-          <tr>
-            <td class="label-col"><label for="incident_journal_incident_request_id"><%=t(:label_incident_journal_incident_request_id)%></label></td>
-            <td class="data-col"><%=f.text_field :incident_request_id, :required=>true ,:id=>"incident_journal_incident_request_id"%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-        
-          <tr>
-            <td class="label-col"><label for="incident_journal_replied_by"><%=t(:label_incident_journal_replied_by)%></label></td>
-            <td class="data-col"><%=f.text_field :replied_by, :required=>true ,:id=>"incident_journal_replied_by"%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
-        
-          <tr>
-            <td class="label-col"><label for="incident_journal_message_body"><%=t(:label_incident_journal_message_body)%></label></td>
-            <td class="data-col"><%=f.text_area :message_body, :required=>true ,:id=>"incident_journal_message_body"%></td>
-            <td class="label-col empty">&nbsp;</td>
-            <td class="data-col empty">&nbsp;</td>
-          </tr>
+        <tr>
+            <td class="label-col"><label><%=t(:label_icm_incident_journal_new)%></label></td>
+            <td class="data-3col" colspan="3">
+              <%=f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true,:class=>"input-xlarge"%>
+              <%= xheditor("msgEditor",true) %>
+            </td>
+        </tr>
       </tbody>
     </table>
   <% end %>
@@ -54,14 +41,6 @@
         </div>
         <div class="sub-page-block-body">
           <%= content_for :form_block_common   %>
-        </div>
-        <!-- 基本信息 -->
-        <div class="sub-page-block-header">
-          <%= form_require_info %>
-          <h3 class="sub-page-block-title"><%= t(:label_icm_incident_category_external_system) %></h3>
-        </div>
-        <div class="sub-page-block-body">
-          <%= content_for :form_block_base  %>
         </div>
       </div>
     </div>
