修正在IE6等限制设备中创建的事故单以及回复中带有的pre标记显示正常

--- a/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/_new_form.html.erb
@@ -22,6 +22,10 @@
         border-left: 0px;
         border-right: 0px;
     }
+    pre {
+        background-color: #FFFFFF;
+        border: none;
+    }
 
 
     div.reply div.reply-header[submit_by="<%= Irm::Person.current.id%>"] {
