修正在IE6下chosen无法识别max-height bug

--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/browser/ie6.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/browser/ie6.css.less
@@ -490,6 +490,10 @@ table.duel-select tr.duel-list select {
     z-index: 1009;
 }
 
+.chzn-container .chzn-results {
+    height: 240px;
+}
+
 .caret{
     border-width: 0;
     background:transparent url(@iconCaretPath) no-repeat -1px -1px;
