--- a/modules/110_hotline_hli/app/views/icm/incident_requests/_quick_create.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/_quick_create.html.erb
@@ -50,6 +50,10 @@
               <label for="incident_request_summary"><%=t(:label_icm_incident_request_summary)%><%= required_icon %></label>
               <%=f.text_area :summary,:rows=>3, :style => "width:175px;" ,:id=>"incident_request_summary",:required=>true%>
             </div>
+              <div class="quickCreateField">
+                <label><%=t(:label_icm_incident_request_contact_way)%><%= required_icon %></label>
+                <%=f.text_field :contact_number,:id=>"incident_request_contact_number", :value=> I18n.t(:label_icm_incident_request_contact_number_tip_a), :class => "grayTips", :style => "width:175px;"%>
+              </div>
             <div class="quick-create-field">
               <table>
                 <tr>
