--- a/modules/110_hotline_hli/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -17,7 +17,7 @@
     <% builder.column(:support_person_id_label,{:title=>t(:label_icm_incident_request_support_person), :width => "90px"}) do |data| %>
           <%= "#{data[:incident_status_id_label]}(#{data[:support_person_id_label]})"%>
     <% end %>
-    <% builder.column(:last_request_date,{:title=>t(:label_icm_incident_request_last_date), :width => "150px",:sortable=>true})%>
+    <% builder.column(:last_response_date,{:title=>t(:label_icm_incident_request_last_date), :width => "150px",:sortable=>true})%>
     <% builder.row do |data|%>
           style="background-color:<%=data[:display_color]%>;color:<%=get_contrast_yiq(data[:display_color])%>;"
     <% end %>
